--- a/css/welcomepage.css
+++ b/css/welcomepage.css
@@ -121,18 +121,19 @@ body {
 
 @media all and (min-width: 750px) {
 	
+	.login{
+		position:absolute;
+	}
+	
 	footer {
   
-  padding: 20px;
-  background-color: RGB(204, 204, 198);
-  color: black;
-  font-size:12px;
-  position:fixed;
-  height:50px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  margin-bottom: 0px;
+        padding: 20px;
+        background-color: RGB(204, 204, 198);
+        color: black;
+        font-size:12px;
+        position:fixed;
+        height:50px;
+  
   
   
 }
@@ -154,8 +155,8 @@ body {
 	body {
         grid-template-columns: 5px;
         grid-template-areas:
-            "login"
-            "foot";
+            "foot"
+            "login";
     }
 	
 	
