--- a/css/calcCSS.css
+++ b/css/calcCSS.css
@@ -66,19 +66,7 @@ ul {
   list-style: none;
 }
 
-#logout{
-	
-	outline:groove;
-	font-size:16px;
-	background-color:yellow;
-	text-align:center;
-	position: absolute;
-    cursor: pointer;     
-    z-index: 15;
-    top: 50%;
-    left: 50%;
-    margin: 280px 0 0 -40px;
-}
+
 
 /* 
  * Completely resets form items
@@ -102,6 +90,22 @@ textarea,
   text-align: left;
 }
 
+.navbar {
+	height:5%;
+}
+
+.main-body {
+	padding: 20px;
+	height:70%;
+	max-width: 500px;
+}
+
+.footer {
+	height:15%;
+	max-width: 500px;
+    margin: auto;
+}
+
 
 
 input:hover,
@@ -120,26 +124,27 @@ button:focus {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-html {
-  font-size: 150%;
-  font-weight: 300;
-  line-height: 1.3;
-}
 
 body {
-  align-items: center;
+  
   background-image: linear-gradient(236deg, #74ebd5, #acb6e5);
-  display: flex;
-  height: 100vh;
-  justify-content: center;
+  
+  height: 97vh;
+}
+
+@media only screen and (max-height: 400px) {
+	body {
+		height: 87vh;
+	}
 }
 
 
-.container {
-  max-width: 20em;
+.tip{
+	height:4%;
+	margin-top: 1%;
 }
 
-.container > p {
+.tip > p {
   text-align: center;
 }
 
@@ -149,7 +154,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 2em;
-  max-width: 15em;
   overflow: hidden;
 }
 
@@ -159,6 +163,7 @@ body {
   font-size: 1.714285714em;
   padding: 0.5em 0.75em;
   text-align: right;
+  height:10%;
 }
 
 .calculator__keys {
@@ -166,7 +171,12 @@ body {
   display: grid;
   grid-gap: 1px;
   grid-template-columns: repeat(4, 1fr);
+  height:90%;
 }
+
+
+
+
 
 .calculator__keys > * {
   background-color: #fff;
@@ -198,4 +208,71 @@ body {
   grid-column: -2;
   grid-row: 2 / span 4;
 }
+
+
+
+.tip{
+	text-align:center;
+}
+
+footer {
+  
+  padding: 20px;
+  background-color: RGB(204, 204, 198);
+  color: black;
+  font-size:12px;      
+  position:fixed;  
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
+  width:100%;
+  margin:auto;
+  height:5%;
+  
+  
+  
+}
+
+
+.personalData {
+	display:flex;
+	flex-wrap:wrap;
+	text-align:center;
+	align-items: center;
+    height: 100%;
+	justify-content: space-evenly;
+}
+
+
+
+.sites{
+	flex-basis:20%;	
+	
+    flex-direction: row;
+}
+	
+
+
+
+
+
+footer a{
+	color: RGB(12,12,12);
+}
+
+
+#logout{
+	margin:3px;
+	outline:groove;
+	font-size:16px;
+	background-color:yellow;
+	text-align:center;
+	position: center;
+    cursor: pointer; 
+    text-align:center;
+    
+   
+}
+
 
